# mmgr

./: .gitignore  CMakeLists.txt  README.md
src/: mmgr.cpp  mmgr.h  nomalloc.h  nommgr.h  nonew.h  readme.txt
test/: test.cpp  testC.c
